<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="35dp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:text="@string/form_titulo"></TextView>

            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:layout_height="match_parent"
                android:text="@string/form_nombnre"></TextView>

            <EditText
                android:textSize="20dp"
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:textSize="20dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/form_email"></TextView>

            <EditText
                android:textSize="20dp"
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:textSize="20dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/form_tel">

            </TextView>

            <EditText
                android:id="@+id/ed_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <TextView
                android:textSize="20dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/form_direccion">

            </TextView>

            <EditText
                android:id="@+id/ed_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:textSize="20dp"
                    android:id="@+id/show_dialag"
                    android:layout_marginTop="25dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/ic_baseline_date_range_24"
                    android:text="@string/form_fecha">


                </Button>

                <TextView
                    android:textSize="20dp"
                    android:layout_marginTop="25dp"
                    android:id="@+id/txv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></TextView>






            </LinearLayout>



            <Button
                android:textSize="20dp"
                android:id="@+id/fab_add"
                android:text="Add"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"></Button>



        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>